--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
   <li>Cario talks about two different types of data in chapter 7 and chapter 8 of his book. The data he talks about in chapter<br>
       7 is data that is gathered from experiments and surveys. This data can be manipulated to show trends such as the mean and<br>
       median. In chapter 8, however, the data he describes is collected and shows trends over time.</li>
-  <li> 
+  <li> Kinds of Visualizations
       <ul>
-          <li>Visualization 1</li>
+        <li><b>Seasonal Subseries Plot-</b> a chart used to display the month-by-month variation of a given variable. This type<br>
+              of visualization is useful because you can compare the monthly variations to the monthly and yearly averages.<br></li>
           <li>Visualization 2</li>
           <li>Visualization 3</li>
       </ul>
