--- a/index.html
+++ b/index.html
@@ -8,9 +8,14 @@
   <li> Kinds of Visualizations
       <ul>
         <li><b>Seasonal Subseries Plot-</b> a chart used to display the month-by-month variation of a given variable. This type<br>
-              of visualization is useful because you can compare the monthly variations to the monthly and yearly averages.<br></li>
-          <li>Visualization 2</li>
-          <li>Visualization 3</li>
+              of visualization is useful because you can compare the monthly variations to the monthly and yearly averages. However,<br>
+              this type of plot can be difficult to read if you have not seen this type of plot before.</li>
+        <li><b>Logarithmic Scale-</b> a chart that can show the percentage increase or decrease per day of a given variable. These are<br>
+              useful to show the rate of change of a variable each day relative to days before it. This type of visualization, however, <br>
+              does not allow us to see the overall change for the given time frame of the variable.</li>
+        <li><b>Connected Scatterplot-</b> a scatterplot that shows how each point of the data set is connected by a line. These plots are<br>
+              help show how closely the data is reated to one another. There becomes a problem with this plot when there are turns and<br>
+               swirls that can throw off the data.</li>
       </ul>
   </li>
   
